# TestSolition

./: CMakeLists.txt  MsvcRuntime.cmake  app.cpp  app.h  base64decoder.cpp  base64decoder.h  builder.cpp  builder.h  consolereader.cpp  consolereader.h  consolewriter.cpp  consolewriter.h  datatype.h  filereader.cpp  filereader.h  idecoder.h  iencoder.h  imultiplier.h  input.txt  ireader.h  itypedetector.h  iwriter.h  m-win-2017-x64-mt.bat  main.cpp  multiplier.cpp  multiplier.h  readme.txt  textdecoder.cpp  textdecoder.h  textencoder.cpp  textencoder.h  typedetector.cpp  typedetector.h
